--- a/main.tex
+++ b/main.tex
@@ -135,13 +135,13 @@
 \specjalnosc{Computer Systems and Networks}
 % TODO
 \title{
-    Extending QEMU emulator to emulate PenPointOS
+    Extending QEMU emulator to emulate PenPoint OS
 }
 
 % Title in Polish for English theses
 % Use it only in English theses
 \poltitle{
-    Rozbudowa emulatora QEMU do celów emulacji systemu PenPointOS
+    Rozbudowa emulatora QEMU do celów emulacji systemu PenPoint OS
 }
 \author{\{Piotr Kochański\}}
 \album{289372}
@@ -160,16 +160,16 @@ The aim of this work is to run a copy of the PenPoint operating system on
 modern hardware in a way that would allow us to reasonably use it with
 a comfortable performance, and describe the process of achieving this.
 
-The beginning of this work is concerned with what PenPointOS is and its
+The beginning of this work is concerned with what PenPoint OS is and its
 importance. The main portion is split in two parts: the first part describes
 the initial attempt at creating a patch for QEMU emulator that would allow
 running a version for a NCR 3125 tablet directly; the second shows steps to
-running a DOS version of PenPointOS installed in FreeDOS on QEMU and
+running a DOS version of PenPoint OS installed in FreeDOS on QEMU and
 VirtualBox, as well as modifying QEMU source code to support graphics tablet in
 PenPoint.
 
 \keywords
-PenPointOS, QEMU, JPC, FreeDOS, pen computing, retro computing, emulation,
+PenPoint OS, QEMU, JPC, FreeDOS, pen computing, retro computing, emulation,
 virtualization
 
 %----------------------------------------
@@ -183,7 +183,7 @@ Celem tej pracy było uruchomienie systemu operacyjnego PenPoint na współczesn
 sprzęcie komputerowym, w ten sposób aby dało się z niego korzystać z komfortową
 wydajnością, i opisać proces w jaki zostało to osiągnięte.
 
-Początek tej pracy jest poświęcony opisowi czym PenPointOS jest i jego znaczeniu
+Początek tej pracy jest poświęcony opisowi czym PenPoint OS jest i jego znaczeniu
 w historii komputerów.  Główna część jest podzielona na dwie części: pierwsza
 opisuje początkową próbę stworzenia patcha dla emulatora QEMU, który by pozwolił
 na uruchomienie wersji przeznaczonej dla tabletu NCR 3125 bezpośrednio; druga
@@ -192,7 +192,7 @@ pokazuje proces uruchomienia wersji PenPoint dla DOSa zainstalowanej wewnątrz
 źródłowego QEMU w celu obsługi tabletu graficznego w PenPoint.
 
 \secondkeywords
-PenPointOS, QEMU, JPC, FreeDOS, komputery rysikowe, retro komputery, emulacja,
+PenPoint OS, QEMU, JPC, FreeDOS, komputery rysikowe, retro komputery, emulacja,
 virtualizacja
 
 \pagestyle{plain}
@@ -214,7 +214,7 @@ virtualizacja
 \input{tex/03-modifying-qemu}
 \input{tex/04-running-penpointos-on-freedos}
 \input{tex/05-summary}
-\input{tex/06-conclusions}
+%\input{tex/06-conclusions}
 
 %---------------
 % Bibliografia
@@ -230,7 +230,7 @@ virtualizacja
 % Makro \acronym dodaje skrót/symbol do listy,
 % zapewniając podstawowe formatowanie.
 % TODO
-\acronymlist
+%\acronymlist
 %\acronym{EiTI}{Wydział Elektroniki i Technik Informacyjnych}
 %\acronym{PW}{Politechnika Warszawska}
 %\acronym{WEIRD}{ang. \emph{Western, Educated, Industrialized, Rich and Democratic}}
